Fix alignment of divs

--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -11,7 +11,6 @@ body {
 h1, h2, h3, h4, h5, h6 {
   margin:0;
   padding:0;
-  color: #ABC012;
 }
 
 .booyah-box {
@@ -21,6 +20,14 @@ h1, h2, h3, h4, h5, h6 {
 
 .btn {
   border-radius: 0;
+}
+
+.col-4 {
+  padding-right: 0px;
+}
+
+.col-7 {
+  padding-left: 0px;
 }
 
 .feature {
@@ -57,7 +64,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .leftside {
-  margin-top: 40px;
+  margin-top: 3%;
+  margin-bottom: 5%;
 }
 
 .logo-box {
@@ -91,18 +99,50 @@ font-family: 'Montserrat', sans-serif;
   }
 }
 
+.padded {
+  padding-left: 15px;
+}
+
 .rightside {
-  margin-top: 40px;
+  margin-top: 3%;
+  margin-bottom: 5%;
+}
+
+.row.match-my-cols {
+    overflow: hidden;
+}
+
+.row.match-my-cols [class*="col-"]{
+  overflow: hidden;
 }
 
 .social {
   background-color: #FFFFFF;
 }
 
+.user-title {
+  color: #4795fb;
+}
+
 .user-profile {
   font-family: 'Montserrat', sans-serif;
   color: #FFFFFF;
   background-color: #1b3257;
+}
+
+.user-profile h1 {
+  font-size: 28px;
+  font-weight: 700;
+}
+
+.user-profile h2 {
+  font-size: 20px;
+  color: #4795fb;
+}
+
+.user-profile h3 {
+  font-size: 15px;
+  color: #FFFFFF;
 }
 
 .video-box {
@@ -117,6 +157,34 @@ font-family: 'Montserrat', sans-serif;
 
 .work-history {
   font-family: 'Montserrat', sans-serif;
-  color: #FFFFFF;
-  background-color: #1b3257;
+  color: #6A6A6A;
+  background-color: #FFFFFF;
+  border-top: 3px;
+  margin-bottom: -99999px;
+  padding-bottom: 99999px;
+}
+
+.work-history h1 {
+  color: #3a475c;
+  font-size: 26px;
+  font-weight: 700;
+}
+
+.work-history h2 {
+  color: #4795fb;
+  font-size: 18px;
+}
+
+.work-history h3 {
+  color: #3a475c;
+  font-size: 14px;
+}
+
+.work-history h4 {
+  color: #3A475C;
+  font-size: 13px;
+}
+
+.work-history h5 {
+  color: #8a9dab;
 }
